
=item *

Many configuration variables have been removed. Please see README.upgrade and the new B<option> builtin.

=item *

Switch to new evaluation strategies system. Please also see README.upgrade

=item *

The builtin B<pshtokenize> was removed as it duplicated code from the
B<debug> strategy.

=item *

The builtin B<which> more conforms to the 'standard' which - it will only
locate an executable. Strategy B<debug> is similar to the old function of
B<which>

=back

=head2 Other changes

=over 4

=item *

The comment strategy was removed. Comments are now already recognized and
ignored by the parser.

=item *

A limited version of the B<perlfunc> strategy is now loaded by default.
The old strategy B<perlfunc> was renamed to B<perlfunc_heavy>.

=cut

###############################################################################
###############################################################################
##
## 0.009
##
###############################################################################
###############################################################################

=head1 0.009 [2001-01-05]

=head2 New Features

=over 4

=item *

New builtin B<rename> - this does the same as Larry Wall's PPT program
but profits from being integrated into B<psh> (it can use B<psh> subs
and variables for the modification).
- warp [2000-05-01]

=item *

C<Psh::OS::backtick()> now can call and capture the output of
B<psh> builtins on Unix.
- warp [2000-05-01]

=item *

Added new builtin B<fc> which is similar to the command of the same
name from B<bash> - inspired by a comment on the SourceForge
message board (and I finally start to like this command ;-).
- warp [2000-05-03]

=item *

The builtin B<history> now also accepts a text as argument. In that
case it will only print commands containing that text.
- warp [2000-07-08]

=item *

The builtin B<fc> now understands the switch C<-p>. Also it's more
behaviour compatible with B<bash>'s B<fc>.

=item *
